# PyCppExt_Template

./: .gitignore  CMakeLists.txt  README.md  conan_provider.cmake  conanfile.txt
src/: config.h.in  main.cpp
test/: test_ext.py  test_main.py
